NetBSD Problem Report #50781

From campbell@mumble.net  Mon Feb  8 00:12:58 2016
Return-Path: <campbell@mumble.net>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 5E0D67ABDA
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  8 Feb 2016 00:12:58 +0000 (UTC)
Message-Id: <20160208001217.28BE96035E@jupiter.mumble.net>
Date: Mon,  8 Feb 2016 00:12:16 +0000 (UTC)
From: riastradh@NetBSD.org
Reply-To: riastradh@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: set hw.acpi.sleep.vbios=0 when kernel display driver handles suspend/resume (e.g., drmkms)
X-Send-Pr-Version: 3.95

>Number:         50781
>Category:       kern
>Synopsis:       set hw.acpi.sleep.vbios=0 when kernel display driver handles suspend/resume (e.g., drmkms)
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 08 00:15:00 +0000 2016
>Closed-Date:    Tue Feb 07 07:01:07 +0000 2017
>Last-Modified:  Tue Feb 07 07:01:07 +0000 2017
>Originator:     riastradh@NetBSD.org
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:

	hw.acpi.sleep.vbios is a kludge to enable the kernel to restore
	the display when it doesn't have a proper display driver, with
	two different methods corresponding to values 1 or 2.  But when
	we do have a proper display driver that already handles
	suspend/resume, only value 0, disabling the whole kludge, makes
	sense.

>How-To-Repeat:

	Attempt to suspend/resume with a DRM/KMS driver with hw.

>Fix:

	Unclear where the logic should go.

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/50781: set hw.acpi.sleep.vbios=0 when kernel display driver handles suspend/resume (e.g., drmkms)
Date: Mon, 8 Feb 2016 09:40:57 +0100

 On Mon, Feb 08, 2016 at 12:15:00AM +0000, riastradh@NetBSD.org wrote:
 > 	Unclear where the logic should go.

 At framebuffer driver attach time, set it to 0, then modify the sysctl to
 be read-only?

 Martin

From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/50781: set hw.acpi.sleep.vbios=0 when kernel display driver
 handles suspend/resume (e.g., drmkms)
Date: Sun, 12 Jun 2016 23:15:52 +0000

 not sent to gnats (with many mailers you have to explicitly fix the
 To: line if replying to your own comment)

    ------

 From: Martin Husemann <martin@duskware.de>
 To: kern-bug-people@netbsd.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org,
 	riastradh@NetBSD.org
 Subject: Re: kern/50781: set hw.acpi.sleep.vbios=0 when kernel display driver
 	handles suspend/resume (e.g., drmkms)
 Date: Mon, 8 Feb 2016 09:48:21 +0100

 On Mon, Feb 08, 2016 at 08:45:01AM +0000, Martin Husemann wrote:
 >  At framebuffer driver attach time, set it to 0, then modify the sysctl to
 >  be read-only?

 Actually slightly more tricky - make it a MD utility function and provide a MI
 macro to call it (overriden by architectures that support "vbios").

 The MI version would do nothing, the MD version call the utility function
 and modify the sysctl.

 Martin

From: "Maya Rashish" <maya@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50781 CVS commit: src/sys/arch/x86/acpi
Date: Tue, 20 Sep 2016 08:38:55 +0000

 Module Name:	src
 Committed By:	maya
 Date:		Tue Sep 20 08:38:55 UTC 2016

 Modified Files:
 	src/sys/arch/x86/acpi: acpi_wakeup.c

 Log Message:
 use a value of hw.acpi.sleep.vbios that might actually
 work for any real hardware suspend.

 stop dragging feet through the ground in PR kern/50781


 To generate a diff of this commit:
 cvs rdiff -u -r1.41 -r1.42 src/sys/arch/x86/acpi/acpi_wakeup.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: coypu@SDF.ORG
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/50781
Date: Tue, 20 Sep 2016 08:43:48 +0000

 Whatever the value should be, it definitely isn't 1. it doesn't work for
 ANYTHING. now that a sane value has been chosen, you can continue
 debating about a proper fix that will neve rbe implemented.

From: Joerg Sonnenberger <joerg@bec.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/50781
Date: Tue, 20 Sep 2016 11:17:53 +0200

 On Tue, Sep 20, 2016 at 08:45:01AM +0000, coypu@SDF.ORG wrote:
 >  Whatever the value should be, it definitely isn't 1. it doesn't work for
 >  ANYTHING. now that a sane value has been chosen, you can continue
 >  debating about a proper fix that will neve rbe implemented.

 That's simply false. It works if the BIOS reactivates the PCI bridges
 itself. Many do that e.g. when asking for a HDD password. I don't mind
 that change itself, but please tone down the random unjustified claims.

 Joerg

From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50781 CVS commit: src/sys/arch/x86
Date: Wed, 21 Sep 2016 00:00:07 +0000

 Module Name:	src
 Committed By:	jmcneill
 Date:		Wed Sep 21 00:00:07 UTC 2016

 Modified Files:
 	src/sys/arch/x86/acpi: acpi_machdep.c
 	src/sys/arch/x86/include: autoconf.h
 	src/sys/arch/x86/x86: x86_autoconf.c x86_stub.c

 Log Message:
 Set hw.acpi.sleep.vbios when a non-HW accelerated VGA driver attaches.
 If the VGA_POST option is present in the kernel the default value is 2,
 otherwise 1. PR kern/50781

 Reviewed by:    agc, mrg


 To generate a diff of this commit:
 cvs rdiff -u -r1.12 -r1.13 src/sys/arch/x86/acpi/acpi_machdep.c
 cvs rdiff -u -r1.3 -r1.4 src/sys/arch/x86/include/autoconf.h
 cvs rdiff -u -r1.74 -r1.75 src/sys/arch/x86/x86/x86_autoconf.c
 cvs rdiff -u -r1.4 -r1.5 src/sys/arch/x86/x86/x86_stub.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 28 Sep 2016 10:41:16 +0000
State-Changed-Why:
is this a sufficient fix?


State-Changed-From-To: feedback->closed
State-Changed-By: maya@NetBSD.org
State-Changed-When: Tue, 07 Feb 2017 07:01:07 +0000
State-Changed-Why:
It is a sufficient fix. 


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.