use a value of hw.acpi.sleep.vbios that might actually work for any real hardware suspend.

stop dragging feet through the ground in PR kern/50781